# wx-qt-anrdoid-arm64-v8a

./: Makefile  Makefile.2  Makefile.3  README.md  U  USAGE.md  a  android-wxapp-deployment-settings.json  autogen.sh  build.sh  copy-deps.sh  dialogs.cpp  glwidget.cpp  glwidget.h  ll  log.txt  main.cpp  minimal.pro  qt_stub.cpp  test.cpp  tree
android/: AndroidManifest.xml
android/cpp/: CMakeLists.txt  wx_app.cpp  wx_app.h  wx_jni.cpp
android/java/org/qtproject/example/wxapp/: MainActivity.java  WxBridge.java
build_android/: CMakeCache.txt  Makefile  cmake_install.cmake
